...
    -->
    <string name="all">All</string>
    <string name="logging_in">Logging in</string>
    <string name="loading_stores">Loading stores</string>
    <string name="signout">Log out</string>
    <string name="my_store">My store</string>
    <string name="orders">Orders</string>
    <string name="email_address">Email address</string>
    <string name="currency_total">%1$s%2$s</string>
    <string name="currency_total_negative">-%1$s%2$s</string>
    <string name="order_total">Order total</string>
    <string name="shipping">Shipping</string>
    <string name="payment">Payment</string>
...
    <string name="orderlist_loading">Looking up your orders…</string>
    <!--
        Order Detail Views
    -->
    <string name="customer_information">Customer information</string>
    <string name="customer_full_name">%1$s %2$s</string>
    <string name="orderdetail_orderstatus_ordernum">Order #%s</string>
    <string name="orderdetail_orderstatus_heading">#%1$s %2$s %3$s</string>
    <string name="orderdetail_orderstatus_created">Created %1$s</string>
    <string name="orderdetail_shipping_method">Shipping method</string>
    <string name="orderdetail_shipping_details">Shipping details</string>
    <string name="orderdetail_billing_details">Billing details</string>
    <string name="orderdetail_email_contentdesc">email customer</string>
...
        Products
    -->
    <string name="product_image_content_description">Product image</string>
    <string name="product_add_image_content_description">Add image</string>
    <string name="product_detail_fetch_product_error">Error fetching product</string>
    <string name="product_variants_fetch_product_variants_error">Error fetching product variations</string>
    <string name="product_name">Title</string>
    <string name="product_purchase_note">Purchase note</string>
    <string name="product_pricing_and_inventory">Pricing and inventory</string>
    <string name="product_property_default_formatter" translatable="false">%1$s: %2$s</string>
    <string name="product_property_variant_formatter" translatable="false">%1$s (%2$s options)</string>
    <string name="product_property_edit">Edit product</string>
    <string name="product_inventory">Inventory</string>
    <string name="product_inventory_empty">Add inventory</string>
    <string name="product_variants">Variants</string>
    <string name="product_price">Price</string>
    <string name="product_price_empty">Add price</string>
    <string name="product_regular_price">Regular price</string>
    <string name="product_sale_price">Sale price</string>
    <string name="product_sale_dates">Sale dates</string>
    <string name="product_sale_date_from_to">%1$s - %2$s</string>
    <string name="product_sale_date_from">from %1$s</string>
    <string name="product_sku">SKU</string>
    <string name="product_sku_summary">Helps to easily identify this product</string>
    <string name="product_stock_status">Stock status</string>
    <string name="product_manage_stock">Manage stock</string>
    <string name="product_sold_individually">Limit one per order</string>
    <string name="product_stock_quantity">Stock quantity</string>
    <string name="product_backorders">Backorders</string>
...
    <string name="product_width">Width</string>
    <string name="product_height">Height</string>
    <string name="product_dimensions">Dimensions</string>
    <string name="product_shipping_class">Shipping class</string>
    <string name="product_no_shipping_class">No shipping class</string>
    <string name="product_shipping_settings">Shipping settings</string>
    <string name="product_total_orders">Total orders</string>
    <string name="product_reviews">Reviews</string>
    <string name="product_downloads">Downloads</string>
    <string name="product_downloadable_files">Downloadable files</string>
    <string name="product_download_limit">Limit</string>
    <string name="product_download_limit_count">%d downloads</string>
    <string name="product_download_expiry">Expiry</string>
    <string name="product_download_expiry_days">%d days</string>
    <string name="product_purchase_details">Purchase details</string>
    <string name="product_share_dialog_title">Share your product</string>
    <string name="product_view_in_store">View product on store</string>
    <string name="product_view_affiliate">View affiliate product</string>
    <string name="product_stock_status_instock">In stock</string>
    <string name="product_stock_status_instock_with_variations">In stock \u2022 %d variations</string>
    <string name="product_stock_status_out_of_stock">Out of stock</string>
    <string name="product_stock_status_on_backorder">On backorder</string>
    <string name="product_stock_count">%s in stock</string>
    <string name="product_backorders_no">Do not allow</string>
    <string name="product_backorders_yes">Allow</string>
    <string name="product_backorders_notify">Allow, but notify customer</string>
    <string name="product_name_variable">Variable %s</string>
    <string name="product_name_external">Affiliate %s</string>
    <string name="product_name_grouped">Grouped %s</string>
    <string name="product_name_virtual">Virtual %s</string>
    <string name="product_list_empty">No products yet</string>
    <string name="product_list_empty_search">No matching products</string>
    <string name="product_search_hint">Search products</string>
    <string name="product_wip_title">Work in progress!</string>
    <string name="product_wip_message">We\'re hard at work on the new Products section so you may see some changes as we get ready for launch 🚀</string>
    <string name="product_bullet" translatable="false"> \u2022 </string>
...
