...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layout_collapseMode="parallax">

                <co.innoshop.android.widgets.WCProductImageGalleryView
                    android:id="@+id/imageGallery"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/product_image_gallery_image_size"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_extra_large"
                    android:layout_marginBottom="@dimen/margin_extra_large"
                    android:background="@color/white"
...
                        android:text="@string/product_image_add"
                        android:textColor="@color/wc_grey_mid"
                        android:textSize="@dimen/text_medium" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/frameStatusBadge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:padding="@dimen/margin_large"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:id="@+id/textStatusBadge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="@drawable/product_detail_status_badge"
                        android:gravity="center"
                        android:paddingStart="@dimen/margin_medium"
...
